# CRA_client

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-windows.yml
docs/caddy/: Caddyfile  README.md
scripts/: package-windows.ps1
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/windows/nsis/: installer.nsi
