[package]
name = "cra_client"
version = "0.1.20"
description = "CRA desktop client wrapper"
authors = ["RenoMO-lab"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.6", features = ["icon-ico", "icon-png"] }
url = "2.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
